--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
     "@mui/system": "5.2.4",
     "axios": "0.24.0",
     "deepmerge": "4.2.2",
+    "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
     "http-status": "^1.5.0",
     "jss": "10.9.0",
     "jwt-decode": "3.1.2",
     "polished": "4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-feather": "2.0.9",
     "react-hook-form": "^7.42.1",
     "react-number-format": "^5.1.3",
