--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-feather": "2.0.9",
     "react-hook-form": "^7.42.1",
+    "react-images-uploading": "^3.1.7",
     "react-number-format": "^5.1.3",
     "react-perfect-scrollbar": "1.5.8",
     "react-router-dom": "6.2.1",
